// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dashboard Page 2 1`] = `
<header
  data-scroll-direction="up"
  data-top="true"
  style="--udsc-header-max-width: 80rem;"
>
  <div>
    <a href="/">
      <div style="--uds-logo-padding: 0;">
        <img
          alt="Utdanningsdirektoratet"
          src="data:image/svg+xml,%3c?xml%20version=&#x27;1.0&#x27;%20encoding=&#x27;UTF-8&#x27;?%3e%3csvg%20id=&#x27;Layer_1&#x27;%20data-name=&#x27;Layer%201&#x27;%20xmlns=&#x27;http://www.w3.org/2000/svg&#x27;%20viewBox=&#x27;0%200%2024%2024&#x27;%3e%3cdefs%3e%3cstyle%3e%20.cls-1%20{%20fill:%20%23303030;%20}%20.cls-2%20{%20fill:%20%23fff;%20}%20.cls-3%20{%20fill:%20%2376c69d;%20}%20%3c/style%3e%3c/defs%3e%3ccircle%20class=&#x27;cls-3&#x27;%20cx=&#x27;12&#x27;%20cy=&#x27;12&#x27;%20r=&#x27;12&#x27;/%3e%3cg%3e%3cpath%20class=&#x27;cls-2&#x27;%20d=&#x27;M18.26,4.55v9.25c0,2.22-1.8,4.02-4.02,4.02-.4,0-.78-.06-1.14-.16.42-.64.67-1.4.67-2.22V6.18l4.49-1.63Z&#x27;/%3e%3cpath%20class=&#x27;cls-1&#x27;%20d=&#x27;M13.11,17.65c-.72,1.08-1.95,1.8-3.35,1.8-2.22,0-4.02-1.8-4.02-4.02V6.81l4.49-1.63v8.62c0,1.82,1.21,3.36,2.88,3.85Z&#x27;/%3e%3c/g%3e%3c/svg%3e"
        >
        <img
          alt="Utdanningsdirektoratet"
          src="data:image/svg+xml,%3c?xml%20version=&#x27;1.0&#x27;%20encoding=&#x27;UTF-8&#x27;?%3e%3csvg%20id=&#x27;Layer_1&#x27;%20data-name=&#x27;Layer%201&#x27;%20xmlns=&#x27;http://www.w3.org/2000/svg&#x27;%20viewBox=&#x27;0%200%2024%2024&#x27;%3e%3cdefs%3e%3cstyle%3e%20.cls-1%20{%20fill:%20%23303030;%20}%20.cls-2%20{%20fill:%20%23fff;%20}%20.cls-3%20{%20fill:%20%2376c69d;%20}%20%3c/style%3e%3c/defs%3e%3ccircle%20class=&#x27;cls-2&#x27;%20cx=&#x27;12&#x27;%20cy=&#x27;12&#x27;%20r=&#x27;12&#x27;/%3e%3cg%3e%3cpath%20class=&#x27;cls-3&#x27;%20d=&#x27;M18.26,4.55v9.25c0,2.22-1.8,4.02-4.02,4.02-.4,0-.78-.06-1.14-.16.42-.64.67-1.4.67-2.22V6.18l4.49-1.63Z&#x27;/%3e%3cpath%20class=&#x27;cls-1&#x27;%20d=&#x27;M13.11,17.65c-.72,1.08-1.95,1.8-3.35,1.8-2.22,0-4.02-1.8-4.02-4.02V6.81l4.49-1.63v8.62c0,1.82,1.21,3.36,2.88,3.85Z&#x27;/%3e%3c/g%3e%3c/svg%3e"
        >
      </div>
      <span data-size="xs">
        Dashboard demo
      </span>
    </a>
    <div>
      <button
        type="button"
        data-color="neutral"
        popovertarget="usermenu2"
        data-show="md"
      >
        <div>
          <h3
            data-size="2xs"
            title="Stian Hansen"
          >
            Stian Hansen
          </h3>
          <p
            data-variant="default"
            data-size="xs"
          >
            Admin
          </p>
        </div>
        <span
          data-variant="circle"
          role="img"
          aria-hidden="true"
        >
          <span>
            SH
          </span>
        </span>
      </button>
      <div
        id="usermenu2"
        popover="manual"
        data-variant="default"
      >
        <ul>
          <li>
            <h2>
              Bytt profil
            </h2>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
            >
              <span
                data-variant="circle"
                role="img"
                aria-hidden="true"
              >
                <svg
                  xmlns="http://www.w3.org/2000/svg"
                  width="1em"
                  height="1em"
                  fill="none"
                  viewbox="0 0 24 24"
                  focusable="false"
                  role="img"
                  aria-hidden="true"
                >
                  <path
                    fill="currentColor"
                    fill-rule="evenodd"
                    d="M2.25 7.5c0-.69.56-1.25 1.25-1.25h4.25V5c0-.966.784-1.75 1.75-1.75h5c.966 0 1.75.784 1.75 1.75v1.25h4.25c.69 0 1.25.56 1.25 1.25v5c0 .69-.56 1.25-1.25 1.25h-.25v4.75c0 .69-.56 1.25-1.25 1.25H5c-.69 0-1.25-.56-1.25-1.25v-4.75H3.5c-.69 0-1.25-.56-1.25-1.25zm7-2.5a.25.25 0 0 1 .25-.25h5a.25.25 0 0 1 .25.25v1.25h-5.5zM12 15.75a.75.75 0 0 0 .75-.75v-1.25h6v4.5H5.25v-4.5h6V15c0 .414.336.75.75.75m0-5.5a.75.75 0 0 1 .75.75v1.25h7.5v-4.5H3.75v4.5h7.5V11a.75.75 0 0 1 .75-.75"
                    clip-rule="evenodd"
                  >
                  </path>
                </svg>
              </span>
              Grålum skole
              <span
                data-count="9+"
                data-variant="base"
              >
              </span>
            </button>
          </li>
          <hr aria-hidden="true">
          <li>
            <button
              data-variant="tertiary"
              type="button"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M5 3.25A1.75 1.75 0 0 0 3.25 5v14c0 .966.784 1.75 1.75 1.75h3.5a.75.75 0 0 0 0-1.5H5a.25.25 0 0 1-.25-.25V5A.25.25 0 0 1 5 4.75h3.5a.75.75 0 0 0 0-1.5zm9.97 3.72a.75.75 0 0 1 1.06 0l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 1 1-1.06-1.06l3.22-3.22H8.5a.75.75 0 0 1 0-1.5h9.69l-3.22-3.22a.75.75 0 0 1 0-1.06"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
              Logg ut
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</header>
<div
  data-color-scheme="light"
  data-size="auto"
  lang="nb"
>
  <h1 data-size="md">
    Schweigaardsgate skole
  </h1>
  <div>
    <div
      role="tablist"
      tabindex="0"
    >
      <button
        id="tab-_r_c_"
        aria-selected="false"
        data-value="overview"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="-1"
        aria-controls="tabpanel-_r_g_"
      >
        Oversikt
      </button>
      <button
        id="tab-_r_d_"
        aria-selected="true"
        data-value="tests"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="0"
        aria-controls="tabpanel-_r_h_"
      >
        Prøver
      </button>
      <button
        id="tab-_r_e_"
        aria-selected="false"
        data-value="test-answers"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="-1"
        aria-controls="tabpanel-_r_i_"
      >
        Prøvesvar
      </button>
      <button
        id="tab-_r_f_"
        aria-selected="false"
        data-value="settings"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="-1"
        aria-controls="tabpanel-_r_j_"
      >
        Innstillinger
      </button>
    </div>
    <div
      id="tabpanel-_r_g_"
      role="tabpanel"
      tabindex="0"
      hidden
      aria-labelledby="tab-_r_c_"
    >
      <p data-variant="default">
        Her får du en oversikt over all den overordnede informasjonen.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøveoversikt
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      id="tabpanel-_r_h_"
      role="tabpanel"
      aria-labelledby="tab-_r_d_"
    >
      <p data-variant="default">
        Oversikt over prøver for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøver
          </h2>
          <div>
            <a
              href="/"
              data-variant="default"
              data-color="neutral"
            >
              <h2>
                Administrer prøve X
              </h2>
            </a>
            <a
              href="/"
              data-variant="default"
              data-color="neutral"
            >
              <h2>
                Administrer prøve Y
              </h2>
            </a>
          </div>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      id="tabpanel-_r_i_"
      role="tabpanel"
      tabindex="0"
      hidden
      aria-labelledby="tab-_r_e_"
    >
      <p data-variant="default">
        Oversikt over prøvesvar for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Karakterfordeling prøvesvar
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      id="tabpanel-_r_j_"
      role="tabpanel"
      hidden
      aria-labelledby="tab-_r_f_"
    >
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Generelle innstillinger
              </h2>
              <div>
                <input
                  role="switch"
                  id="dark-mode"
                  type="checkbox"
                  aria-describedby="dark-mode:description:1"
                >
                <label
                  data-weight="regular"
                  for="dark-mode"
                >
                  Mørk modus
                </label>
                <div
                  data-field="description"
                  id="dark-mode:description:1"
                >
                  Et mørkere grensesnitt for å spare øynene.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="auto-updates"
                  type="checkbox"
                  value="auto-updates"
                  checked
                  aria-describedby="auto-updates:description:1"
                >
                <label
                  data-weight="regular"
                  for="auto-updates"
                >
                  Automatiske oppdateringer
                </label>
                <div
                  data-field="description"
                  id="auto-updates:description:1"
                >
                  Bruk automatisk oppdateringer for å holde systemet oppdatert.
                </div>
              </div>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Personvern
              </h2>
              <fieldset>
                <legend data-weight="medium">
                  Hvem kan se profilen din?
                </legend>
                <p data-variant="default">
                  Velg hvem som har tilgang til å se profilen din.
                </p>
                <div>
                  <input
                    id="privacy-public"
                    type="radio"
                    value="public"
                    checked
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-public"
                  >
                    Alle
                  </label>
                </div>
                <div>
                  <input
                    id="privacy-friends"
                    type="radio"
                    value="friends"
                    name="privacy"
                    aria-describedby="privacy-friends:description:1"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-friends"
                  >
                    Kun venner
                  </label>
                  <div
                    data-field="description"
                    id="privacy-friends:description:1"
                  >
                    Bare personer du har lagt til kan se profilen din.
                  </div>
                </div>
                <div>
                  <input
                    id="privacy-private"
                    type="radio"
                    value="private"
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-private"
                  >
                    Kun meg
                  </label>
                </div>
                <p
                  data-field="validation"
                  hidden
                  id="validation-privacy"
                >
                </p>
              </fieldset>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Varsler
              </h2>
              <div>
                <input
                  role="switch"
                  id="sound-notifications"
                  type="checkbox"
                  value="sound-notifications"
                  aria-describedby="sound-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="sound-notifications"
                >
                  Lydvarsler
                </label>
                <div
                  data-field="description"
                  id="sound-notifications:description:1"
                >
                  Spill av lyd når et varsel mottas.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="popup-notifications"
                  type="checkbox"
                  value="popup-notifications"
                  aria-describedby="popup-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="popup-notifications"
                >
                  Popup-varsler
                </label>
                <div
                  data-field="description"
                  id="popup-notifications:description:1"
                >
                  Vis popup-varsler på skjermen.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="email-notifications"
                  type="checkbox"
                  value="email-notifications"
                  aria-describedby="email-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="email-notifications"
                >
                  E-postvarsler
                </label>
                <div
                  data-field="description"
                  id="email-notifications:description:1"
                >
                  Tillat e-postvarsler for viktige oppdateringer.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Page 3 1`] = `
<header
  data-scroll-direction="up"
  data-top="true"
  style="--udsc-header-max-width: 80rem;"
>
  <div>
    <a href="/">
      <div style="--uds-logo-padding: 0;">
        <img
          alt="Utdanningsdirektoratet"
          src="data:image/svg+xml,%3c?xml%20version=&#x27;1.0&#x27;%20encoding=&#x27;UTF-8&#x27;?%3e%3csvg%20id=&#x27;Layer_1&#x27;%20data-name=&#x27;Layer%201&#x27;%20xmlns=&#x27;http://www.w3.org/2000/svg&#x27;%20viewBox=&#x27;0%200%2024%2024&#x27;%3e%3cdefs%3e%3cstyle%3e%20.cls-1%20{%20fill:%20%23303030;%20}%20.cls-2%20{%20fill:%20%23fff;%20}%20.cls-3%20{%20fill:%20%2376c69d;%20}%20%3c/style%3e%3c/defs%3e%3ccircle%20class=&#x27;cls-3&#x27;%20cx=&#x27;12&#x27;%20cy=&#x27;12&#x27;%20r=&#x27;12&#x27;/%3e%3cg%3e%3cpath%20class=&#x27;cls-2&#x27;%20d=&#x27;M18.26,4.55v9.25c0,2.22-1.8,4.02-4.02,4.02-.4,0-.78-.06-1.14-.16.42-.64.67-1.4.67-2.22V6.18l4.49-1.63Z&#x27;/%3e%3cpath%20class=&#x27;cls-1&#x27;%20d=&#x27;M13.11,17.65c-.72,1.08-1.95,1.8-3.35,1.8-2.22,0-4.02-1.8-4.02-4.02V6.81l4.49-1.63v8.62c0,1.82,1.21,3.36,2.88,3.85Z&#x27;/%3e%3c/g%3e%3c/svg%3e"
        >
        <img
          alt="Utdanningsdirektoratet"
          src="data:image/svg+xml,%3c?xml%20version=&#x27;1.0&#x27;%20encoding=&#x27;UTF-8&#x27;?%3e%3csvg%20id=&#x27;Layer_1&#x27;%20data-name=&#x27;Layer%201&#x27;%20xmlns=&#x27;http://www.w3.org/2000/svg&#x27;%20viewBox=&#x27;0%200%2024%2024&#x27;%3e%3cdefs%3e%3cstyle%3e%20.cls-1%20{%20fill:%20%23303030;%20}%20.cls-2%20{%20fill:%20%23fff;%20}%20.cls-3%20{%20fill:%20%2376c69d;%20}%20%3c/style%3e%3c/defs%3e%3ccircle%20class=&#x27;cls-2&#x27;%20cx=&#x27;12&#x27;%20cy=&#x27;12&#x27;%20r=&#x27;12&#x27;/%3e%3cg%3e%3cpath%20class=&#x27;cls-3&#x27;%20d=&#x27;M18.26,4.55v9.25c0,2.22-1.8,4.02-4.02,4.02-.4,0-.78-.06-1.14-.16.42-.64.67-1.4.67-2.22V6.18l4.49-1.63Z&#x27;/%3e%3cpath%20class=&#x27;cls-1&#x27;%20d=&#x27;M13.11,17.65c-.72,1.08-1.95,1.8-3.35,1.8-2.22,0-4.02-1.8-4.02-4.02V6.81l4.49-1.63v8.62c0,1.82,1.21,3.36,2.88,3.85Z&#x27;/%3e%3c/g%3e%3c/svg%3e"
        >
      </div>
      <span data-size="xs">
        Dashboard demo
      </span>
    </a>
    <div>
      <button
        type="button"
        data-color="neutral"
        popovertarget="usermenu2"
        data-show="md"
      >
        <div>
          <h3
            data-size="2xs"
            title="Stian Hansen"
          >
            Stian Hansen
          </h3>
          <p
            data-variant="default"
            data-size="xs"
          >
            Admin
          </p>
        </div>
        <span
          data-variant="circle"
          role="img"
          aria-hidden="true"
        >
          <span>
            SH
          </span>
        </span>
      </button>
      <div
        id="usermenu2"
        popover="manual"
        data-variant="default"
      >
        <ul>
          <li>
            <h2>
              Bytt profil
            </h2>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
            >
              <span
                data-variant="circle"
                role="img"
                aria-hidden="true"
              >
                <svg
                  xmlns="http://www.w3.org/2000/svg"
                  width="1em"
                  height="1em"
                  fill="none"
                  viewbox="0 0 24 24"
                  focusable="false"
                  role="img"
                  aria-hidden="true"
                >
                  <path
                    fill="currentColor"
                    fill-rule="evenodd"
                    d="M2.25 7.5c0-.69.56-1.25 1.25-1.25h4.25V5c0-.966.784-1.75 1.75-1.75h5c.966 0 1.75.784 1.75 1.75v1.25h4.25c.69 0 1.25.56 1.25 1.25v5c0 .69-.56 1.25-1.25 1.25h-.25v4.75c0 .69-.56 1.25-1.25 1.25H5c-.69 0-1.25-.56-1.25-1.25v-4.75H3.5c-.69 0-1.25-.56-1.25-1.25zm7-2.5a.25.25 0 0 1 .25-.25h5a.25.25 0 0 1 .25.25v1.25h-5.5zM12 15.75a.75.75 0 0 0 .75-.75v-1.25h6v4.5H5.25v-4.5h6V15c0 .414.336.75.75.75m0-5.5a.75.75 0 0 1 .75.75v1.25h7.5v-4.5H3.75v4.5h7.5V11a.75.75 0 0 1 .75-.75"
                    clip-rule="evenodd"
                  >
                  </path>
                </svg>
              </span>
              Grålum skole
              <span
                data-count="9+"
                data-variant="base"
              >
              </span>
            </button>
          </li>
          <hr aria-hidden="true">
          <li>
            <button
              data-variant="tertiary"
              type="button"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M5 3.25A1.75 1.75 0 0 0 3.25 5v14c0 .966.784 1.75 1.75 1.75h3.5a.75.75 0 0 0 0-1.5H5a.25.25 0 0 1-.25-.25V5A.25.25 0 0 1 5 4.75h3.5a.75.75 0 0 0 0-1.5zm9.97 3.72a.75.75 0 0 1 1.06 0l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 1 1-1.06-1.06l3.22-3.22H8.5a.75.75 0 0 1 0-1.5h9.69l-3.22-3.22a.75.75 0 0 1 0-1.06"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
              Logg ut
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</header>
<div
  data-color-scheme="light"
  data-size="auto"
  lang="nb"
>
  <h1 data-size="md">
    Schweigaardsgate skole
  </h1>
  <div>
    <div
      role="tablist"
      tabindex="0"
    >
      <button
        id="tab-_r_m_"
        aria-selected="false"
        data-value="overview"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="-1"
        aria-controls="tabpanel-_r_q_"
      >
        Oversikt
      </button>
      <button
        id="tab-_r_n_"
        aria-selected="false"
        data-value="tests"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="-1"
        aria-controls="tabpanel-_r_r_"
      >
        Prøver
      </button>
      <button
        id="tab-_r_o_"
        aria-selected="true"
        data-value="test-answers"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="0"
        aria-controls="tabpanel-_r_s_"
      >
        Prøvesvar
      </button>
      <button
        id="tab-_r_p_"
        aria-selected="false"
        data-value="settings"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="-1"
        aria-controls="tabpanel-_r_t_"
      >
        Innstillinger
      </button>
    </div>
    <div
      id="tabpanel-_r_q_"
      role="tabpanel"
      tabindex="0"
      hidden
      aria-labelledby="tab-_r_m_"
    >
      <p data-variant="default">
        Her får du en oversikt over all den overordnede informasjonen.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøveoversikt
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      id="tabpanel-_r_r_"
      role="tabpanel"
      hidden
      aria-labelledby="tab-_r_n_"
    >
      <p data-variant="default">
        Oversikt over prøver for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøver
          </h2>
          <div>
            <a
              href="/"
              data-variant="default"
              data-color="neutral"
            >
              <h2>
                Administrer prøve X
              </h2>
            </a>
            <a
              href="/"
              data-variant="default"
              data-color="neutral"
            >
              <h2>
                Administrer prøve Y
              </h2>
            </a>
          </div>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      id="tabpanel-_r_s_"
      role="tabpanel"
      tabindex="0"
      aria-labelledby="tab-_r_o_"
    >
      <p data-variant="default">
        Oversikt over prøvesvar for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Karakterfordeling prøvesvar
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      id="tabpanel-_r_t_"
      role="tabpanel"
      hidden
      aria-labelledby="tab-_r_p_"
    >
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Generelle innstillinger
              </h2>
              <div>
                <input
                  role="switch"
                  id="dark-mode"
                  type="checkbox"
                  aria-describedby="dark-mode:description:1"
                >
                <label
                  data-weight="regular"
                  for="dark-mode"
                >
                  Mørk modus
                </label>
                <div
                  data-field="description"
                  id="dark-mode:description:1"
                >
                  Et mørkere grensesnitt for å spare øynene.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="auto-updates"
                  type="checkbox"
                  value="auto-updates"
                  checked
                  aria-describedby="auto-updates:description:1"
                >
                <label
                  data-weight="regular"
                  for="auto-updates"
                >
                  Automatiske oppdateringer
                </label>
                <div
                  data-field="description"
                  id="auto-updates:description:1"
                >
                  Bruk automatisk oppdateringer for å holde systemet oppdatert.
                </div>
              </div>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Personvern
              </h2>
              <fieldset>
                <legend data-weight="medium">
                  Hvem kan se profilen din?
                </legend>
                <p data-variant="default">
                  Velg hvem som har tilgang til å se profilen din.
                </p>
                <div>
                  <input
                    id="privacy-public"
                    type="radio"
                    value="public"
                    checked
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-public"
                  >
                    Alle
                  </label>
                </div>
                <div>
                  <input
                    id="privacy-friends"
                    type="radio"
                    value="friends"
                    name="privacy"
                    aria-describedby="privacy-friends:description:1"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-friends"
                  >
                    Kun venner
                  </label>
                  <div
                    data-field="description"
                    id="privacy-friends:description:1"
                  >
                    Bare personer du har lagt til kan se profilen din.
                  </div>
                </div>
                <div>
                  <input
                    id="privacy-private"
                    type="radio"
                    value="private"
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-private"
                  >
                    Kun meg
                  </label>
                </div>
                <p
                  data-field="validation"
                  hidden
                  id="validation-privacy"
                >
                </p>
              </fieldset>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Varsler
              </h2>
              <div>
                <input
                  role="switch"
                  id="sound-notifications"
                  type="checkbox"
                  value="sound-notifications"
                  aria-describedby="sound-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="sound-notifications"
                >
                  Lydvarsler
                </label>
                <div
                  data-field="description"
                  id="sound-notifications:description:1"
                >
                  Spill av lyd når et varsel mottas.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="popup-notifications"
                  type="checkbox"
                  value="popup-notifications"
                  aria-describedby="popup-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="popup-notifications"
                >
                  Popup-varsler
                </label>
                <div
                  data-field="description"
                  id="popup-notifications:description:1"
                >
                  Vis popup-varsler på skjermen.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="email-notifications"
                  type="checkbox"
                  value="email-notifications"
                  aria-describedby="email-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="email-notifications"
                >
                  E-postvarsler
                </label>
                <div
                  data-field="description"
                  id="email-notifications:description:1"
                >
                  Tillat e-postvarsler for viktige oppdateringer.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Page 4 1`] = `
<header
  data-scroll-direction="up"
  data-top="true"
  style="--udsc-header-max-width: 80rem;"
>
  <div>
    <a href="/">
      <div style="--uds-logo-padding: 0;">
        <img
          alt="Utdanningsdirektoratet"
          src="data:image/svg+xml,%3c?xml%20version=&#x27;1.0&#x27;%20encoding=&#x27;UTF-8&#x27;?%3e%3csvg%20id=&#x27;Layer_1&#x27;%20data-name=&#x27;Layer%201&#x27;%20xmlns=&#x27;http://www.w3.org/2000/svg&#x27;%20viewBox=&#x27;0%200%2024%2024&#x27;%3e%3cdefs%3e%3cstyle%3e%20.cls-1%20{%20fill:%20%23303030;%20}%20.cls-2%20{%20fill:%20%23fff;%20}%20.cls-3%20{%20fill:%20%2376c69d;%20}%20%3c/style%3e%3c/defs%3e%3ccircle%20class=&#x27;cls-3&#x27;%20cx=&#x27;12&#x27;%20cy=&#x27;12&#x27;%20r=&#x27;12&#x27;/%3e%3cg%3e%3cpath%20class=&#x27;cls-2&#x27;%20d=&#x27;M18.26,4.55v9.25c0,2.22-1.8,4.02-4.02,4.02-.4,0-.78-.06-1.14-.16.42-.64.67-1.4.67-2.22V6.18l4.49-1.63Z&#x27;/%3e%3cpath%20class=&#x27;cls-1&#x27;%20d=&#x27;M13.11,17.65c-.72,1.08-1.95,1.8-3.35,1.8-2.22,0-4.02-1.8-4.02-4.02V6.81l4.49-1.63v8.62c0,1.82,1.21,3.36,2.88,3.85Z&#x27;/%3e%3c/g%3e%3c/svg%3e"
        >
        <img
          alt="Utdanningsdirektoratet"
          src="data:image/svg+xml,%3c?xml%20version=&#x27;1.0&#x27;%20encoding=&#x27;UTF-8&#x27;?%3e%3csvg%20id=&#x27;Layer_1&#x27;%20data-name=&#x27;Layer%201&#x27;%20xmlns=&#x27;http://www.w3.org/2000/svg&#x27;%20viewBox=&#x27;0%200%2024%2024&#x27;%3e%3cdefs%3e%3cstyle%3e%20.cls-1%20{%20fill:%20%23303030;%20}%20.cls-2%20{%20fill:%20%23fff;%20}%20.cls-3%20{%20fill:%20%2376c69d;%20}%20%3c/style%3e%3c/defs%3e%3ccircle%20class=&#x27;cls-2&#x27;%20cx=&#x27;12&#x27;%20cy=&#x27;12&#x27;%20r=&#x27;12&#x27;/%3e%3cg%3e%3cpath%20class=&#x27;cls-3&#x27;%20d=&#x27;M18.26,4.55v9.25c0,2.22-1.8,4.02-4.02,4.02-.4,0-.78-.06-1.14-.16.42-.64.67-1.4.67-2.22V6.18l4.49-1.63Z&#x27;/%3e%3cpath%20class=&#x27;cls-1&#x27;%20d=&#x27;M13.11,17.65c-.72,1.08-1.95,1.8-3.35,1.8-2.22,0-4.02-1.8-4.02-4.02V6.81l4.49-1.63v8.62c0,1.82,1.21,3.36,2.88,3.85Z&#x27;/%3e%3c/g%3e%3c/svg%3e"
        >
      </div>
      <span data-size="xs">
        Dashboard demo
      </span>
    </a>
    <div>
      <button
        type="button"
        data-color="neutral"
        popovertarget="usermenu2"
        data-show="md"
      >
        <div>
          <h3
            data-size="2xs"
            title="Stian Hansen"
          >
            Stian Hansen
          </h3>
          <p
            data-variant="default"
            data-size="xs"
          >
            Admin
          </p>
        </div>
        <span
          data-variant="circle"
          role="img"
          aria-hidden="true"
        >
          <span>
            SH
          </span>
        </span>
      </button>
      <div
        id="usermenu2"
        popover="manual"
        data-variant="default"
      >
        <ul>
          <li>
            <h2>
              Bytt profil
            </h2>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
            >
              <span
                data-variant="circle"
                role="img"
                aria-hidden="true"
              >
                <svg
                  xmlns="http://www.w3.org/2000/svg"
                  width="1em"
                  height="1em"
                  fill="none"
                  viewbox="0 0 24 24"
                  focusable="false"
                  role="img"
                  aria-hidden="true"
                >
                  <path
                    fill="currentColor"
                    fill-rule="evenodd"
                    d="M2.25 7.5c0-.69.56-1.25 1.25-1.25h4.25V5c0-.966.784-1.75 1.75-1.75h5c.966 0 1.75.784 1.75 1.75v1.25h4.25c.69 0 1.25.56 1.25 1.25v5c0 .69-.56 1.25-1.25 1.25h-.25v4.75c0 .69-.56 1.25-1.25 1.25H5c-.69 0-1.25-.56-1.25-1.25v-4.75H3.5c-.69 0-1.25-.56-1.25-1.25zm7-2.5a.25.25 0 0 1 .25-.25h5a.25.25 0 0 1 .25.25v1.25h-5.5zM12 15.75a.75.75 0 0 0 .75-.75v-1.25h6v4.5H5.25v-4.5h6V15c0 .414.336.75.75.75m0-5.5a.75.75 0 0 1 .75.75v1.25h7.5v-4.5H3.75v4.5h7.5V11a.75.75 0 0 1 .75-.75"
                    clip-rule="evenodd"
                  >
                  </path>
                </svg>
              </span>
              Grålum skole
              <span
                data-count="9+"
                data-variant="base"
              >
              </span>
            </button>
          </li>
          <hr aria-hidden="true">
          <li>
            <button
              data-variant="tertiary"
              type="button"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M5 3.25A1.75 1.75 0 0 0 3.25 5v14c0 .966.784 1.75 1.75 1.75h3.5a.75.75 0 0 0 0-1.5H5a.25.25 0 0 1-.25-.25V5A.25.25 0 0 1 5 4.75h3.5a.75.75 0 0 0 0-1.5zm9.97 3.72a.75.75 0 0 1 1.06 0l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 1 1-1.06-1.06l3.22-3.22H8.5a.75.75 0 0 1 0-1.5h9.69l-3.22-3.22a.75.75 0 0 1 0-1.06"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
              Logg ut
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</header>
<div
  data-color-scheme="light"
  data-size="auto"
  lang="nb"
>
  <h1 data-size="md">
    Schweigaardsgate skole
  </h1>
  <div>
    <div
      role="tablist"
      tabindex="0"
    >
      <button
        id="tab-_r_10_"
        aria-selected="false"
        data-value="overview"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="-1"
        aria-controls="tabpanel-_r_14_"
      >
        Oversikt
      </button>
      <button
        id="tab-_r_11_"
        aria-selected="false"
        data-value="tests"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="-1"
        aria-controls="tabpanel-_r_15_"
      >
        Prøver
      </button>
      <button
        id="tab-_r_12_"
        aria-selected="false"
        data-value="test-answers"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="-1"
        aria-controls="tabpanel-_r_16_"
      >
        Prøvesvar
      </button>
      <button
        id="tab-_r_13_"
        aria-selected="true"
        data-value="settings"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="0"
        aria-controls="tabpanel-_r_17_"
      >
        Innstillinger
      </button>
    </div>
    <div
      id="tabpanel-_r_14_"
      role="tabpanel"
      tabindex="0"
      hidden
      aria-labelledby="tab-_r_10_"
    >
      <p data-variant="default">
        Her får du en oversikt over all den overordnede informasjonen.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøveoversikt
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      id="tabpanel-_r_15_"
      role="tabpanel"
      hidden
      aria-labelledby="tab-_r_11_"
    >
      <p data-variant="default">
        Oversikt over prøver for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøver
          </h2>
          <div>
            <a
              href="/"
              data-variant="default"
              data-color="neutral"
            >
              <h2>
                Administrer prøve X
              </h2>
            </a>
            <a
              href="/"
              data-variant="default"
              data-color="neutral"
            >
              <h2>
                Administrer prøve Y
              </h2>
            </a>
          </div>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      id="tabpanel-_r_16_"
      role="tabpanel"
      tabindex="0"
      hidden
      aria-labelledby="tab-_r_12_"
    >
      <p data-variant="default">
        Oversikt over prøvesvar for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Karakterfordeling prøvesvar
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      id="tabpanel-_r_17_"
      role="tabpanel"
      aria-labelledby="tab-_r_13_"
    >
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Generelle innstillinger
              </h2>
              <div>
                <input
                  role="switch"
                  id="dark-mode"
                  type="checkbox"
                  aria-describedby="dark-mode:description:1"
                >
                <label
                  data-weight="regular"
                  for="dark-mode"
                >
                  Mørk modus
                </label>
                <div
                  data-field="description"
                  id="dark-mode:description:1"
                >
                  Et mørkere grensesnitt for å spare øynene.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="auto-updates"
                  type="checkbox"
                  value="auto-updates"
                  checked
                  aria-describedby="auto-updates:description:1"
                >
                <label
                  data-weight="regular"
                  for="auto-updates"
                >
                  Automatiske oppdateringer
                </label>
                <div
                  data-field="description"
                  id="auto-updates:description:1"
                >
                  Bruk automatisk oppdateringer for å holde systemet oppdatert.
                </div>
              </div>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Personvern
              </h2>
              <fieldset>
                <legend data-weight="medium">
                  Hvem kan se profilen din?
                </legend>
                <p data-variant="default">
                  Velg hvem som har tilgang til å se profilen din.
                </p>
                <div>
                  <input
                    id="privacy-public"
                    type="radio"
                    value="public"
                    checked
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-public"
                  >
                    Alle
                  </label>
                </div>
                <div>
                  <input
                    id="privacy-friends"
                    type="radio"
                    value="friends"
                    name="privacy"
                    aria-describedby="privacy-friends:description:1"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-friends"
                  >
                    Kun venner
                  </label>
                  <div
                    data-field="description"
                    id="privacy-friends:description:1"
                  >
                    Bare personer du har lagt til kan se profilen din.
                  </div>
                </div>
                <div>
                  <input
                    id="privacy-private"
                    type="radio"
                    value="private"
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-private"
                  >
                    Kun meg
                  </label>
                </div>
                <p
                  data-field="validation"
                  hidden
                  id="validation-privacy"
                >
                </p>
              </fieldset>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Varsler
              </h2>
              <div>
                <input
                  role="switch"
                  id="sound-notifications"
                  type="checkbox"
                  value="sound-notifications"
                  aria-describedby="sound-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="sound-notifications"
                >
                  Lydvarsler
                </label>
                <div
                  data-field="description"
                  id="sound-notifications:description:1"
                >
                  Spill av lyd når et varsel mottas.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="popup-notifications"
                  type="checkbox"
                  value="popup-notifications"
                  aria-describedby="popup-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="popup-notifications"
                >
                  Popup-varsler
                </label>
                <div
                  data-field="description"
                  id="popup-notifications:description:1"
                >
                  Vis popup-varsler på skjermen.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="email-notifications"
                  type="checkbox"
                  value="email-notifications"
                  aria-describedby="email-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="email-notifications"
                >
                  E-postvarsler
                </label>
                <div
                  data-field="description"
                  id="email-notifications:description:1"
                >
                  Tillat e-postvarsler for viktige oppdateringer.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Story 1`] = `
<header
  data-scroll-direction="up"
  data-top="true"
  style="--udsc-header-max-width: 80rem;"
>
  <div>
    <a href="/">
      <div style="--uds-logo-padding: 0;">
        <img
          alt="Utdanningsdirektoratet"
          src="data:image/svg+xml,%3c?xml%20version=&#x27;1.0&#x27;%20encoding=&#x27;UTF-8&#x27;?%3e%3csvg%20id=&#x27;Layer_1&#x27;%20data-name=&#x27;Layer%201&#x27;%20xmlns=&#x27;http://www.w3.org/2000/svg&#x27;%20viewBox=&#x27;0%200%2024%2024&#x27;%3e%3cdefs%3e%3cstyle%3e%20.cls-1%20{%20fill:%20%23303030;%20}%20.cls-2%20{%20fill:%20%23fff;%20}%20.cls-3%20{%20fill:%20%2376c69d;%20}%20%3c/style%3e%3c/defs%3e%3ccircle%20class=&#x27;cls-3&#x27;%20cx=&#x27;12&#x27;%20cy=&#x27;12&#x27;%20r=&#x27;12&#x27;/%3e%3cg%3e%3cpath%20class=&#x27;cls-2&#x27;%20d=&#x27;M18.26,4.55v9.25c0,2.22-1.8,4.02-4.02,4.02-.4,0-.78-.06-1.14-.16.42-.64.67-1.4.67-2.22V6.18l4.49-1.63Z&#x27;/%3e%3cpath%20class=&#x27;cls-1&#x27;%20d=&#x27;M13.11,17.65c-.72,1.08-1.95,1.8-3.35,1.8-2.22,0-4.02-1.8-4.02-4.02V6.81l4.49-1.63v8.62c0,1.82,1.21,3.36,2.88,3.85Z&#x27;/%3e%3c/g%3e%3c/svg%3e"
        >
        <img
          alt="Utdanningsdirektoratet"
          src="data:image/svg+xml,%3c?xml%20version=&#x27;1.0&#x27;%20encoding=&#x27;UTF-8&#x27;?%3e%3csvg%20id=&#x27;Layer_1&#x27;%20data-name=&#x27;Layer%201&#x27;%20xmlns=&#x27;http://www.w3.org/2000/svg&#x27;%20viewBox=&#x27;0%200%2024%2024&#x27;%3e%3cdefs%3e%3cstyle%3e%20.cls-1%20{%20fill:%20%23303030;%20}%20.cls-2%20{%20fill:%20%23fff;%20}%20.cls-3%20{%20fill:%20%2376c69d;%20}%20%3c/style%3e%3c/defs%3e%3ccircle%20class=&#x27;cls-2&#x27;%20cx=&#x27;12&#x27;%20cy=&#x27;12&#x27;%20r=&#x27;12&#x27;/%3e%3cg%3e%3cpath%20class=&#x27;cls-3&#x27;%20d=&#x27;M18.26,4.55v9.25c0,2.22-1.8,4.02-4.02,4.02-.4,0-.78-.06-1.14-.16.42-.64.67-1.4.67-2.22V6.18l4.49-1.63Z&#x27;/%3e%3cpath%20class=&#x27;cls-1&#x27;%20d=&#x27;M13.11,17.65c-.72,1.08-1.95,1.8-3.35,1.8-2.22,0-4.02-1.8-4.02-4.02V6.81l4.49-1.63v8.62c0,1.82,1.21,3.36,2.88,3.85Z&#x27;/%3e%3c/g%3e%3c/svg%3e"
        >
      </div>
      <span data-size="xs">
        Dashboard demo
      </span>
    </a>
    <div>
      <button
        type="button"
        data-color="neutral"
        popovertarget="usermenu2"
        data-show="md"
      >
        <div>
          <h3
            data-size="2xs"
            title="Stian Hansen"
          >
            Stian Hansen
          </h3>
          <p
            data-variant="default"
            data-size="xs"
          >
            Admin
          </p>
        </div>
        <span
          data-variant="circle"
          role="img"
          aria-hidden="true"
        >
          <span>
            SH
          </span>
        </span>
      </button>
      <div
        id="usermenu2"
        popover="manual"
        data-variant="default"
      >
        <ul>
          <li>
            <h2>
              Bytt profil
            </h2>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
            >
              <span
                data-variant="circle"
                role="img"
                aria-hidden="true"
              >
                <svg
                  xmlns="http://www.w3.org/2000/svg"
                  width="1em"
                  height="1em"
                  fill="none"
                  viewbox="0 0 24 24"
                  focusable="false"
                  role="img"
                  aria-hidden="true"
                >
                  <path
                    fill="currentColor"
                    fill-rule="evenodd"
                    d="M2.25 7.5c0-.69.56-1.25 1.25-1.25h4.25V5c0-.966.784-1.75 1.75-1.75h5c.966 0 1.75.784 1.75 1.75v1.25h4.25c.69 0 1.25.56 1.25 1.25v5c0 .69-.56 1.25-1.25 1.25h-.25v4.75c0 .69-.56 1.25-1.25 1.25H5c-.69 0-1.25-.56-1.25-1.25v-4.75H3.5c-.69 0-1.25-.56-1.25-1.25zm7-2.5a.25.25 0 0 1 .25-.25h5a.25.25 0 0 1 .25.25v1.25h-5.5zM12 15.75a.75.75 0 0 0 .75-.75v-1.25h6v4.5H5.25v-4.5h6V15c0 .414.336.75.75.75m0-5.5a.75.75 0 0 1 .75.75v1.25h7.5v-4.5H3.75v4.5h7.5V11a.75.75 0 0 1 .75-.75"
                    clip-rule="evenodd"
                  >
                  </path>
                </svg>
              </span>
              Grålum skole
              <span
                data-count="9+"
                data-variant="base"
              >
              </span>
            </button>
          </li>
          <hr aria-hidden="true">
          <li>
            <button
              data-variant="tertiary"
              type="button"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M5 3.25A1.75 1.75 0 0 0 3.25 5v14c0 .966.784 1.75 1.75 1.75h3.5a.75.75 0 0 0 0-1.5H5a.25.25 0 0 1-.25-.25V5A.25.25 0 0 1 5 4.75h3.5a.75.75 0 0 0 0-1.5zm9.97 3.72a.75.75 0 0 1 1.06 0l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 1 1-1.06-1.06l3.22-3.22H8.5a.75.75 0 0 1 0-1.5h9.69l-3.22-3.22a.75.75 0 0 1 0-1.06"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
              Logg ut
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</header>
<div
  data-color-scheme="light"
  data-size="auto"
  lang="nb"
>
  <h1 data-size="md">
    Schweigaardsgate skole
  </h1>
  <div>
    <div
      role="tablist"
      tabindex="0"
    >
      <button
        id="tab-_r_2_"
        aria-selected="true"
        data-value="overview"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="0"
        aria-controls="tabpanel-_r_6_"
      >
        Oversikt
      </button>
      <button
        id="tab-_r_3_"
        aria-selected="false"
        data-value="tests"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="-1"
        aria-controls="tabpanel-_r_7_"
      >
        Prøver
      </button>
      <button
        id="tab-_r_4_"
        aria-selected="false"
        data-value="test-answers"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="-1"
        aria-controls="tabpanel-_r_8_"
      >
        Prøvesvar
      </button>
      <button
        id="tab-_r_5_"
        aria-selected="false"
        data-value="settings"
        role="tab"
        type="button"
        data-roving-tabindex-item="true"
        tabindex="-1"
        aria-controls="tabpanel-_r_9_"
      >
        Innstillinger
      </button>
    </div>
    <div
      id="tabpanel-_r_6_"
      role="tabpanel"
      tabindex="0"
      aria-labelledby="tab-_r_2_"
    >
      <p data-variant="default">
        Her får du en oversikt over all den overordnede informasjonen.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøveoversikt
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      id="tabpanel-_r_7_"
      role="tabpanel"
      hidden
      aria-labelledby="tab-_r_3_"
    >
      <p data-variant="default">
        Oversikt over prøver for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøver
          </h2>
          <div>
            <a
              href="/"
              data-variant="default"
              data-color="neutral"
            >
              <h2>
                Administrer prøve X
              </h2>
            </a>
            <a
              href="/"
              data-variant="default"
              data-color="neutral"
            >
              <h2>
                Administrer prøve Y
              </h2>
            </a>
          </div>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      id="tabpanel-_r_8_"
      role="tabpanel"
      tabindex="0"
      hidden
      aria-labelledby="tab-_r_4_"
    >
      <p data-variant="default">
        Oversikt over prøvesvar for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Karakterfordeling prøvesvar
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              role="img"
              viewbox="0 0 50 50"
              data-size="lg"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                r="20"
                fill="none"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      id="tabpanel-_r_9_"
      role="tabpanel"
      hidden
      aria-labelledby="tab-_r_5_"
    >
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Generelle innstillinger
              </h2>
              <div>
                <input
                  role="switch"
                  id="dark-mode"
                  type="checkbox"
                  aria-describedby="dark-mode:description:1"
                >
                <label
                  data-weight="regular"
                  for="dark-mode"
                >
                  Mørk modus
                </label>
                <div
                  data-field="description"
                  id="dark-mode:description:1"
                >
                  Et mørkere grensesnitt for å spare øynene.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="auto-updates"
                  type="checkbox"
                  value="auto-updates"
                  checked
                  aria-describedby="auto-updates:description:1"
                >
                <label
                  data-weight="regular"
                  for="auto-updates"
                >
                  Automatiske oppdateringer
                </label>
                <div
                  data-field="description"
                  id="auto-updates:description:1"
                >
                  Bruk automatisk oppdateringer for å holde systemet oppdatert.
                </div>
              </div>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Personvern
              </h2>
              <fieldset>
                <legend data-weight="medium">
                  Hvem kan se profilen din?
                </legend>
                <p data-variant="default">
                  Velg hvem som har tilgang til å se profilen din.
                </p>
                <div>
                  <input
                    id="privacy-public"
                    type="radio"
                    value="public"
                    checked
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-public"
                  >
                    Alle
                  </label>
                </div>
                <div>
                  <input
                    id="privacy-friends"
                    type="radio"
                    value="friends"
                    name="privacy"
                    aria-describedby="privacy-friends:description:1"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-friends"
                  >
                    Kun venner
                  </label>
                  <div
                    data-field="description"
                    id="privacy-friends:description:1"
                  >
                    Bare personer du har lagt til kan se profilen din.
                  </div>
                </div>
                <div>
                  <input
                    id="privacy-private"
                    type="radio"
                    value="private"
                    name="privacy"
                  >
                  <label
                    data-weight="regular"
                    for="privacy-private"
                  >
                    Kun meg
                  </label>
                </div>
                <p
                  data-field="validation"
                  hidden
                  id="validation-privacy"
                >
                </p>
              </fieldset>
            </div>
            <div
              data-variant="tinted"
              data-color="support1"
            >
              <h2>
                Varsler
              </h2>
              <div>
                <input
                  role="switch"
                  id="sound-notifications"
                  type="checkbox"
                  value="sound-notifications"
                  aria-describedby="sound-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="sound-notifications"
                >
                  Lydvarsler
                </label>
                <div
                  data-field="description"
                  id="sound-notifications:description:1"
                >
                  Spill av lyd når et varsel mottas.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="popup-notifications"
                  type="checkbox"
                  value="popup-notifications"
                  aria-describedby="popup-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="popup-notifications"
                >
                  Popup-varsler
                </label>
                <div
                  data-field="description"
                  id="popup-notifications:description:1"
                >
                  Vis popup-varsler på skjermen.
                </div>
              </div>
              <div>
                <input
                  role="switch"
                  id="email-notifications"
                  type="checkbox"
                  value="email-notifications"
                  aria-describedby="email-notifications:description:1"
                >
                <label
                  data-weight="regular"
                  for="email-notifications"
                >
                  E-postvarsler
                </label>
                <div
                  data-field="description"
                  id="email-notifications:description:1"
                >
                  Tillat e-postvarsler for viktige oppdateringer.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
